--- a/Cp3-Cadastro/Views/Endereco/ApagarConfirmacao.cshtml
+++ b/Cp3-Cadastro/Views/Endereco/ApagarConfirmacao.cshtml
@@ -4,11 +4,13 @@
 }
 
 <div class="text-center">
-    <h3>Realmente deseja apagar o endereco (@Model.rua_endereco)?</h3>
+    <h3>Realmente deseja apagar o endereço (@Model.rua_endereco)?</h3>
 </div>
 
-<form asp-controller="Endereco" asp-action="Apagar" method="post">
+<form class="text-center mt-4" asp-controller="Endereco" asp-action="Apagar" method="post">
     <input type="hidden" asp-for="id_endereco" />
-    <button type="submit" class="btn btn-danger btn-block">Confirmar exclusão</button>
-    <a class="btn btn-primary btn-block" role="button" asp-controller="Endereco" asp-action="Index">Cancelar exclusão</a>
+    <div class="d-grid gap-2">
+        <button type="submit" class="btn btn-danger">Confirmar exclusão</button>
+        <a class="btn btn-primary" role="button" asp-controller="Endereco" asp-action="Index">Cancelar exclusão</a>
+    </div>
 </form>
