--- a/Cp3-Cadastro/Views/Pessoa/ApagarConfirmacao.cshtml
+++ b/Cp3-Cadastro/Views/Pessoa/ApagarConfirmacao.cshtml
@@ -7,8 +7,10 @@
     <h3>Realmente deseja apagar o usuário (@Model.nome_pessoa)?</h3>
 </div>
 
-<form asp-controller="Pessoa" asp-action="Apagar" method="post">
+<form class="text-center mt-4" asp-controller="Pessoa" asp-action="Apagar" method="post">
     <input type="hidden" asp-for="id_pessoa" />
-    <button type="submit" class="btn btn-danger btn-block">Confirmar exclusão</button>
-    <a class="btn btn-primary btn-block" role="button" asp-controller="Pessoa" asp-action="Index">Cancelar exclusão</a>
+    <div class="d-grid gap-2">
+        <button type="submit" class="btn btn-danger">Confirmar exclusão</button>
+        <a class="btn btn-primary" role="button" asp-controller="Pessoa" asp-action="Index">Cancelar exclusão</a>
+    </div>
 </form>
