--- a/Cp3-Cadastro/Views/Endereco/Index.cshtml
+++ b/Cp3-Cadastro/Views/Endereco/Index.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "Lista de Endereço";
 }
 
-<div class="text-center">
+<div class="card bg-dark text-white text-center m-2 p-2">
     <h1 class="">Lista de enderecos</h1>
     <br />
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th scope="col">Id</th>
