Adaptado para Dark theme

--- a/Cp3-Cadastro/Views/Pessoa/Index.cshtml
+++ b/Cp3-Cadastro/Views/Pessoa/Index.cshtml
@@ -3,13 +3,13 @@
     ViewData["Title"] = "Lista de Pessoas";
 }
 
-<div class="text-center">
+<div class="card bg-dark text-white text-center m-2 p-2">
     <h1 class="">Lista de pessoas</h1>
     <br />
     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a class="btn btn-primary" role="button" asp-controller="Pessoa" asp-action="Criar">Adicionar nova pessoa</a>
     </div>
-    <table class="table">
+    <table class="table table-dark">
         <thead>
             <tr>
                 <th scope="col">Id</th>
