--- a/Cp3-Cadastro/wwwroot/css/site.css
+++ b/Cp3-Cadastro/wwwroot/css/site.css
@@ -18,5 +18,33 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: #121212;
+    color: white;
 }
+
+.footer {
+    margin-top: auto;
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #1c1c1c;
+    color: white;
+    padding: 1rem 0;
+}
+
+.card {
+    background-color: #2c2c2c;
+    border-color: #444444;
+}
+
+a {
+    color: #1e90ff;
+}
+
+    a:hover {
+        color: #00bfff;
+    }
